[package]
name = "play_ps_with_rust"
version = "0.1.0"
authors = ["Seungmin Jeon <seungmin.jeon@cp.kaist.ac.kr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/mod.rs"

[[bin]]
name = "play_ps_with_rust"
path = "bin/play_ps_with_rust.rs"

[dependencies]
